<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SlidingPaneLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sliding_panel_trig"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/windowBackground"
        android:id="@+id/v_scroll"
        android:scrollbarStyle="outsideInset"
        android:fadeScrollbars="false" >
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/windowBackground"
            android:scrollbarStyle="insideInset"
            android:fadeScrollbars="false"
            android:id="@+id/h_scroll">
            <TextView
                android:id="@+id/rules_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/trig_formulas"
                android:layout_gravity="left|top"
                android:textSize="@dimen/info" />
        </HorizontalScrollView>
    </ScrollView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/windowBackground"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <GridLayout
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/trig_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:columnCount="3"
                android:background="@color/windowBackground"
                android:fadeScrollbars="true"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                tools:context="a.vidishcheva.easymath.activities.Trigonometry"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:text="@string/angle_grad"
                    android:layout_marginBottom="@dimen/margin_bottom" />
                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="@dimen/edit_text_trig"
                    android:id="@+id/angle_grad"
                    android:inputType="numberSigned|numberDecimal"
                    android:textSize="@dimen/text_size"
                    android:hint="0"
                    android:maxLength="8"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left"
                    android:clickable="true"
                    android:focusableInTouchMode="true" />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/angle_min_sec"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:gravity="left"  />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:text="@string/angle_rad"
                    android:layout_marginBottom="@dimen/margin_bottom"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/angle_rad"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/angle_pi"
                    android:layout_marginBottom="@dimen/margin_bottom"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:text="@string/sin"
                    android:layout_marginBottom="@dimen/margin_bottom" />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/sin"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/sin_radic"
                    android:layout_marginBottom="@dimen/margin_bottom"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:text="@string/cos"
                    android:layout_marginBottom="@dimen/margin_bottom"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/cos"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/cos_radic"
                    android:layout_marginBottom="@dimen/margin_bottom"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:text="@string/tg"
                    android:layout_marginBottom="@dimen/margin_bottom"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/tg"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/tg_radic"
                    android:layout_marginBottom="@dimen/margin_bottom"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:text="@string/ctg"
                    android:layout_marginBottom="@dimen/margin_bottom"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/ctg"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:id="@+id/ctg_radic"
                    android:layout_marginBottom="@dimen/margin_bottom"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/click_trig"
                    android:text="@string/button_count"
                    android:textSize="@dimen/text_size"
                    android:onClick="onClickTrig"
                    android:layout_marginBottom="@dimen/margin_bottom" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/clear_trig"
                    android:text="@string/button_clear"
                    android:textSize="@dimen/text_size"
                    android:onClick="onClickClear"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:layout_marginLeft="@dimen/margin_left"/>
            </GridLayout>
        </HorizontalScrollView>
    </ScrollView>
</android.support.v4.widget.SlidingPaneLayout>
